[tool.poetry]
name = "hust-bearing"
version = "0.1.0"
description = ""
authors = ["vuong-viet-hung <vuongviethung156@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
torch = "^2.1.1"
torchvision = "^0.16.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
