[tool.poetry]
name = "hust-bearing"
version = "0.1.0"
description = "Researches dedicated to bearing fault diagnosis from Mandevices Laboratory"
authors = ["vuong-viet-hung <vuongviethung156@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.2"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
tensorboard = "^2.15.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
tqdm = "^4.66.1"
lightning = {extras = ["pytorch-extra"], version = "^2.1.2"}
mlp-mixer-pytorch = "^0.1.1"
torch-tb-profiler = "^0.4.3"


[tool.poetry.group.visualization.dependencies]
matplotlib = "^3.8.2"


[tool.poetry.group.notebooks.dependencies]
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.10"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.7.1"
pylint = "^3.0.3"
pytest = "^7.4.3"

[tool.poetry.scripts]
hust-bearing = "hust_bearing.main:cli_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
